# EquilibriumEngine

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  imgui.ini
cmake/: assimp-config.cmake  geometry_compiler.cmake  sdl2-config.cmake  shader_compiler.cmake  texture_compiler.cmake
editor/: CMakeLists.txt  editor.c  editor.h  editor_base.h
editor/systems/: imgui_dockspace_system.c  imgui_dockspace_system.h  imgui_entity_inspector.c  imgui_entity_inspector.h  imgui_gizmo_system.c  imgui_gizmo_system.h  imgui_overlay_system.c  imgui_overlay_system.h  mouse_picking_system.c  mouse_picking_system.h
equilibrium/: CMakeLists.txt  base.h  engine.c  engine.h  entity.c  entity.h  equilibrium.h  equilibrium_defines.h  logging.h  world.c  world.h
equilibrium/components/: bgfx_components.c  bgfx_components.h  cglm_components.c  cglm_components.h  gui.c  gui.h  hot_reloadable_module.c  hot_reloadable_module.h  input.c  input.h  sdl_window.c  sdl_window.h  transform.c  transform.h
equilibrium/components/renderer/: renderer_components.c  renderer_components.h
equilibrium/components/scene/: scene_components.c  scene_components.h
equilibrium/engine-simulation/: CMakeLists.txt  engine_simulation.c
equilibrium/systems/: bgfx_system.c  bgfx_system.h  sdl_system.c  sdl_system.h  transform_system.c  transform_system.h
equilibrium/systems/imgui/: cimgui_base.h  imgui_bgfx_sdl_system.c  imgui_bgfx_sdl_system.h
equilibrium/systems/imgui/imgui_bgfx/: Roboto_Medium.h  fs_imgui_image.bin.h  fs_ocornut_imgui.bin.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  vs_imgui_image.bin.h  vs_ocornut_imgui.bin.h
equilibrium/systems/rendering/: base_rendering_system.c  base_rendering_system.h  deferred_renderer_system.c  deferred_renderer_system.h  forward_renderer_system.c  forward_renderer_system.h  gfx_resource_system.c  gfx_resource_system.h  light_system.c  light_system.h  pbr_system.c  pbr_system.h
equilibrium/systems/scene/: camera_system.c  camera_system.h
equilibrium/systems/sky_system/: sky_color_map.cpp  sky_color_map.h  sky_system.c  sky_system.h
equilibrium/utils/: assimp_utils.h  bgfx_utils.h  bgfx_utils_wrapper.cpp  bgfx_utils_wrapper.h  cgltf_utils.c  cgltf_utils.h
launcher/: CMakeLists.txt  launcher.cc
launcher/sandbox/: CMakeLists.txt  bootstrap_system.c  bootstrap_system.h  defines.h  main.c
launcher/sandbox/models/Sponza/glTF/: 1219024358953944284.dds  2051777328469649772.dds  2185409758123873465.dds  2299742237651021498.dds  2411100444841994089.dds  2775690330959970771.dds  2969916736137545357.dds  332936164838540657.dds  3371964815757888145.dds  3455394979645218238.dds  3628158980083700836.dds  3827035219084910048.dds  4477655471536070370.dds  466164707995436622.dds  4675343432951571524.dds  4871783166746854860.dds  4910669866631290573.dds  4975155472559461469.dds  5061699253647017043.dds  5792855332885324923.dds  5823059166183034438.dds  6047387724914829168.dds  6151467286084645207.dds  6667038893015345571.dds  6772804448157695701.dds  715093869573992647.dds  7268504077753552595.dds  7441062115984513793.dds  755318871556304029.dds  759203620573749278.dds  7645212358685992005.dds  7815564343179553343.dds  8006627369776289000.dds  8051790464816141987.dds  8114461559286000061.dds  8481240838833932244.dds  8503262930880235456.dds  8747919177698443163.dds  8750083169368950601.dds  8773302468495022225.dds  (+5 more)
launcher/sandbox/shaders/shading/: fs_deferred_fullscreen.sc  fs_forward.sc  fs_tonemap.sc  pbr.sh  tonemapping.sh  vs_deferred_fullscreen.sc  vs_deferred_light.sc
launcher/sandbox/shaders/sky/: fs_sky.sc  vs_sky.sc
